update all paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,89 +2,215 @@
   "editor.codeActionWidget.showHeaders": true,
   "cSpell.language": "pt-BR,lorem",
   "cSpell.words": [
+    "aberto",
+    "abertos",
     "About",
+    "aclamado",
+    "ações",
+    "adorado",
+    "ainda",
+    "alternativa",
+    "ambientado",
+    "ambientes",
     "anos",
     "apenas",
+    "apocalíptico",
     "após",
+    "apresentam",
+    "aspecto",
+    "atmosfera",
     "através",
+    "avançada",
     "Aventure",
     "benevolente",
+    "Bethesda",
     "busca",
     "cada",
+    "cativando",
     "civilização",
     "como",
+    "complexa",
+    "Compre",
+    "comunidade",
     "conhecer",
+    "conhecida",
     "conhecido",
+    "consequências",
+    "continua",
+    "continuam",
+    "cria",
+    "criando",
     "criaturas",
+    "crítica",
+    "cultura",
+    "curso",
     "decisão",
+    "decisões",
     "descubra",
+    "Desde",
+    "Desenvolvida",
     "desoladas",
+    "dessa",
     "destino",
     "desvendar",
+    "detalhes",
+    "devastação",
     "devastadas",
     "devastadora",
+    "devastou",
+    "difíceis",
     "disposto",
+    "distópica",
+    "divergência",
+    "divergindo",
+    "diversas",
+    "durante",
     "efeitos",
+    "elementos",
     "Embarque",
     "emerge",
+    "empresa",
+    "encontrar",
     "enfrenta",
     "Enfrente",
     "enquanto",
     "enterrados",
+    "envolvente",
+    "envolventes",
     "épica",
     "escassos",
+    "escolhas",
     "está",
+    "estética",
+    "estético",
+    "estilístico",
+    "expandem",
+    "exploram",
     "explorar",
+    "explorarem",
+    "facções",
     "Fallout",
     "fazer",
+    "franquia",
+    "futurista",
     "Gallery",
     "gangues",
+    "globo",
     "guerra",
     "herói",
+    "história",
     "humanidade",
+    "humor",
+    "icônicas",
+    "imersivo",
     "implacável",
+    "importantes",
+    "indústria",
+    "influentes",
+    "início",
+    "jogabilidade",
+    "jogadores",
+    "jogo",
+    "jogos",
     "jornada",
+    "lançamento",
+    "liberdade",
+    "linha",
+    "lutam",
+    "mais",
     "mãos",
+    "marcado",
+    "meio",
+    "melancólica",
     "memoráveis",
+    "milhões",
+    "missões",
+    "mistura",
+    "misturando",
+    "modders",
+    "moldar",
     "moldará",
+    "morais",
     "mortais",
     "muito",
     "mundo",
+    "mundos",
     "mutantes",
     "narrativa",
+    "narrativas",
+    "negro",
+    "nossa",
     "nuclear",
+    "oferece",
+    "offs",
+    "onde",
     "oportunidades",
     "paisagens",
+    "passa",
+    "pela",
+    "pelos",
     "perdidas",
     "perigos",
     "personagem",
     "personagens",
     "pragmático",
     "preciso",
+    "primeiro",
+    "principais",
+    "profundas",
+    "própria",
+    "próprias",
+    "prosperar",
     "radiação",
     "raivosas",
     "ramificada",
+    "realidade",
     "realmente",
+    "reconstruir",
     "recursos",
     "redor",
+    "repleta",
     "repletas",
     "respostas",
+    "retro",
     "rica",
+    "ricos",
+    "Rights",
     "ruínas",
+    "satírica",
+    "secundárias",
     "segredos",
     "Será",
+    "série",
     "Shop",
+    "sido",
     "significa",
+    "significativa",
     "sobrevivente",
+    "sobreviventes",
     "sobreviver",
+    "social",
+    "sombria",
+    "spin",
+    "Studios",
     "suas",
     "subterrâneo",
     "também",
+    "tecnologia",
+    "tempo",
     "terras",
+    "títulos",
     "tomar",
+    "tornou",
     "Treiler",
+    "única",
+    "universo",
     "Vagando",
+    "vários",
     "vastas",
+    "vastos",
+    "vibrante",
+    "videogames",
     "vilão",
     "vindo",
     "você",
