update fonts paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
     "facções",
     "Fallout",
     "fazer",
+    "fonts",
     "franquia",
     "futurista",
     "Gallery",
@@ -146,6 +147,7 @@
     "onde",
     "oportunidades",
     "paisagens",
+    "para",
     "passa",
     "pela",
     "pelos",
